--- a/index.html
+++ b/index.html
@@ -159,15 +159,15 @@
                         <div class="card-body">
                             <h6 class="title text-danger">June 2024 - August 2024</h6>
                             <P>Data Engineer - Summer Intern</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <P class="subtitle">Created web scraping algorithms and ETL pipelines; integrated LLMs for product data extraction and advertisement generation.</P>
                             <hr>
                             <h6 class="title text-danger">2022 - June 2023</h6>
                             <P>Software Engineer - Data and Artificial Intelligence </P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <P class="subtitle">Led AI implementation and research on multiclass classification and time series forecasting, boosting operational efficiency by 30% through successful deployment.</P>
                             <hr>
                             <h6 class="title text-danger">June 2021 - 2022</h6>
                             <P>Associate Developer - Data Analytics</P>
-                            <P class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae, cupiditate ullam dolor ratione repellendus.aliquid repudiandae saepe!.</P>
+                            <P class="subtitle">Developed ZeroShotBot AI chatbot with NLP and pre-trained LLMs, enhancing scaling capabilities and data processing efficiency by 30%.</P>
                         </div>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <h6>Pyspark</h6>
+                            <h6>Big Data - Pyspark</h6>
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
@@ -508,7 +508,7 @@
                 <div class="portfolio-container"> 
                     <div class="col-md-6 col-lg-4 data_eng new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-1.jpg" class="img-fluid" alt="Lending Club Analytics">
+                            <img src="assets/imgs/LC.png" class="img-fluid" alt="Lending Club Analytics">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-1.jpg"></a>
                                 <div class="text-holder">
@@ -520,7 +520,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 data_eng new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-2.jpg" class="img-fluid" alt="Vehicle Data Architecture and Implementation">
+                            <img src="assets/imgs/VDA.png" class="img-fluid" alt="Vehicle Data Architecture and Implementation">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-2.jpg"></a>
                                 <div class="text-holder">
@@ -532,9 +532,9 @@
                     </div>
                     <div class="col-md-6 col-lg-4 data_science GenAi new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/advertising-2.jpg" class="img-fluid" alt="Reddit Data Analytics">                         
+                            <img src="assets/imgs/red.png" class="img-fluid" alt="Reddit Data Analytics">                         
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/advertising-2.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/red.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Reddit Data Analytics</h6>
                                     <p class="subtitle">Analyzed Reddit posts and comments using a hybrid model combining statistical topic modeling (Latent Dirichlet Allocation) with LLMs (Bert, MiniLM, GPT) to improve contextual semantic analysis by 30%.</p>
@@ -544,9 +544,9 @@
                     </div> 
                     <div class="col-md-6 col-lg-4 data_science new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-4.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">
+                            <img src="assets/imgs/Ka.png" class="img-fluid" alt="Home Credit Default Risk (HCDR)">
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/web-4.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/Ka.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Home Credit Default Risk (HCDR)</h6>
                                     <p class="subtitle">Conducted comprehensive data analysis and predictive modeling using Python, including data wrangling, feature engineering, and machine learning models (XGBoost, SVM) for credit risk assessment.</p>
@@ -557,7 +557,7 @@
 
                     <div class="col-md-6 col-lg-4 data_science"> 
                         <div class="portfolio-item">
-                            <img src="assets/imgs/advertising-1.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                               
+                            <img src="assets/imgs/sp.png" class="img-fluid" alt="SpaceX Failure analysis">                               
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/advertising-1.jpg"></a>
                                 <div class="text-holder">
@@ -569,7 +569,7 @@
                     </div> 
                     <div class="col-md-6 col-lg-4 GenAi new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/web-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">  
+                            <img src="assets/imgs/MNIST.png" class="img-fluid" alt="MNIST Handwritten Digit Recognition">  
                            <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/web-3.jpg"></a>
                                 <div class="text-holder">
@@ -581,31 +581,31 @@
                     </div>
                     <div class="col-md-6 col-lg-4 data_science new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/advertising-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">       
+                            <img src="assets/imgs/CHURN.png" class="img-fluid" alt="Customer Churn Data Visualization">       
                            <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/advertising-3.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Customer Churn Data Visualization</h6>
-                                    <p class="subtitle">Created an enterprise-wide data visualization report using PowerBI, applying advanced data modeling techniques to provide actionable insights into customer churn trends, facilitating informed decision-making.</p>
+                                    <p class="subtitle">Created an enterprise-wide data visualization report using PowerBI, applying advanced data modeling techniques to provide actionable insights into customer churn trends.</p>
                                 </div>
                             </div>
                         </div>                                                       
                     </div> 
                     <div class="col-md-6 col-lg-4 web data science ">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-1.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                        
+                            <img src="assets/imgs/COV.png" class="img-fluid" alt="Covid/Visualisation live Dashboard">                        
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-1.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title"> Covid/Visualisation live Dashboard</h6>
-                                    <p class="subtitle">Created an interactive geospatial visualization dashboard for COVID-19 data, including live web scraping, statistical measures, and deployment on AWS. Currently exploring for CI/CD for enhanced performance!</p>
+                                    <p class="subtitle">Created an interactive geospatial visualization dashboard for COVID-19 data, including live web scraping, statistical measures!</p>
                                 </div>
                             </div> 
                         </div>
                     </div> 
                     <div class="col-md-6 col-lg-4 web">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-2.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">  
+                            <img src="assets/imgs/PORT.png" class="img-fluid" alt="Portfolio">  
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-2.jpg"></a>
                                 <div class="text-holder">
@@ -617,7 +617,7 @@
                     </div> 
                     <div class="col-md-6 col-lg-4  web">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-3.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">   
+                            <img src="assets/imgs/BLOCK.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">   
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-3.jpg"></a>
                                 <div class="text-holder">
@@ -629,7 +629,7 @@
                     </div> 
                     <div class="col-md-6 col-lg-4 web">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/branding-4.jpg" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                      
+                            <img src="assets/imgs/Blockchain.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">                      
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-4.jpg"></a>
                                 <div class="text-holder">
@@ -652,7 +652,7 @@
             <div class="row">
                 <div class="blog-card">
                     <div class="img-holder">
-                        <img src="assets/imgs/blog1.jpg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/blog1.png" alt="LLM — Large Language Models">
                     </div>
                     <div class="content-holder">
                         <h6 class="title">LLM — Large Language Models</h6>
@@ -675,7 +675,7 @@
 
                 <div class="blog-card">
                     <div class="img-holder">
-                        <img src="assets/imgs/blog2.jpg" alt="Apache Spark — Data Engineering">
+                        <img src="assets/imgs/blog2.png" alt="Apache Spark — Data Engineering">
                     </div>
                     <div class="content-holder">
                         <h6 class="title">Apache Spark — Data Engineering</h6>
@@ -694,7 +694,7 @@
                 <!-- blog-card -->
                 <div class="blog-card">
                     <div class="img-holder">
-                        <img src="assets/imgs/blog3.jpg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/blog3.png" alt="Prompt Engineering">
                     </div>
                     <div class="content-holder">
                         <h4 class="title">Prompting - Prompt Engineering</h4>
@@ -722,7 +722,7 @@
                 <div class="col-lg-8">
                     <div class="contact-form-card">
                         <h4 class="contact-title">Send a message</h4>
-                        <form action="">
+                        <form action="assets/send.php">
                             <div class="form-group">
                                 <input  class="form-control" type="text" placeholder="Name *" required>
                             </div>
@@ -746,7 +746,7 @@
                                 <i class="ti-mobile icon-md"></i>
                             </div>
                             <div class="col-10 ">
-                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+ (123) 456-789</span></h6>
+                                <h6 class="d-inline">Phone : <br> <span class="text-muted">+1 (930) 444-0530</span></h6>
                             </div>
                         </div>
                         <div class="row mb-2">
@@ -754,7 +754,7 @@
                                 <i class="ti-map-alt icon-md"></i>
                             </div>
                             <div class="col-10">
-                                <h6 class="d-inline">Address :<br> <span class="text-muted">12345 Fake ST NoWhere AB Country.</span></h6>
+                                <h6 class="d-inline">Address :<br> <span class="text-muted">Indiana, USA </span></h6>
                             </div>
                         </div>
                         <div class="row mb-2">
