--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
                 <div class="col-lg-8">
                     <div class="contact-form-card">
                         <h4 class="contact-title">Send a message</h4>
-                        <form action="assets/send.php">
+                        <form action="https://formspree.io/f/mldrkyyw" method="post">
                             <div class="form-group">
                                 <input  class="form-control" type="text" placeholder="Name *" required>
                             </div>
