--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
                 <div class="col-lg-8">
                     <div class="contact-form-card">
                         <h4 class="contact-title">Send a message</h4>
-                        <form action="https://formspree.io/f/mldrkyyw" method="post">
+                        <form id = "form" action="https://formspree.io/f/mldrkyyw" method="post">
                             <div class="form-group">
                                 <input  class="form-control" name="name" type="text" placeholder="Name *" required>
                             </div>
@@ -734,6 +734,7 @@
                             </div>
                             <div class="form-group ">
                                 <button type="submit" class="form-control btn btn-primary" >Send Message</button>
+                                <p id="my-form-status"></p>
                             </div>
                         </form>
                     </div>
@@ -801,7 +802,37 @@
 
     <!-- ali js -->
     <script src="assets/js/ali.js"></script>
-
-
+    <script>
+        var form = document.getElementById("form");
+        
+        async function handleSubmit(event) {
+          event.preventDefault();
+          var status = document.getElementById("my-form-status");
+          var data = new FormData(event.target);
+          fetch(event.target.action, {
+            method: form.method,
+            body: data,
+            headers: {
+                'Accept': 'application/json'
+            }
+          }).then(response => {
+            if (response.ok) {
+              status.innerHTML = "Thanks for your submission!";
+              form.reset()
+            } else {
+              response.json().then(data => {
+                if (Object.hasOwn(data, 'errors')) {
+                  status.innerHTML = data["errors"].map(error => error["message"]).join(", ")
+                } else {
+                  status.innerHTML = "Oops! There was a problem submitting your form"
+                }
+              })
+            }
+          }).catch(error => {
+            status.innerHTML = "Oops! There was a problem submitting your form"
+          });
+        }
+        form.addEventListener("submit", handleSubmit)
+      </script>
 </body>
 </html>
