--- a/index.html
+++ b/index.html
@@ -32,15 +32,18 @@
                 <!-- <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li> -->
                 <!-- <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-twitter" aria-hidden="true"></i></a></li> -->
                 <!-- <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-google" aria-hidden="true"></i></a></li> -->
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/shoukath-ali-b6650576/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://github.com/shoukath-ali"><i class="ti-github" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://medium.com/@heyshoukath"><i class="ti-notepad" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href ="mailto:shshaik@iu.edu"><i class="ti-google" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://www.instagram.com/_mr.stardom_"><i class="ti-instagram" aria-hidden="true"></i></a></li>
                 <!-- <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-Medium" aria-hidden="true"></i></a></li> -->
             </ul>  
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Shoukath Ali</h1>
                 <h6 class="header-mono" >Data Science Engineer | Developer</h6>
-                <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Resume</button>
+                <a href="https://www.icloud.com/iclouddrive/038jZwUrpy5AtWq9_KmODTU8g#Shoukath_CV", target="_blank"><button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Resume</button></a>
             </div>
         </div>
     </header>
@@ -91,7 +94,7 @@
                 <p class="mt-20">Fun Fact: Born in the city of destiny.</p>
                 <p class="mt-20">I'm a Nature lover (My beautiful University, has it all)</p>
                 <p class="mt-20">I love swimming in the midst of Natural Flow</p>
-                <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button>
+                <a href="https://www.icloud.com/iclouddrive/038jZwUrpy5AtWq9_KmODTU8g#Shoukath_CV" , target="_blank"><button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button></a>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
@@ -104,11 +107,11 @@
                     <li><span>Address</span> :  Bloomington, Indiana, USA.</li>
                 </ul>
                 <ul class="social-icons pt-3">
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-google" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                    <li class="social-item"><a class="social-link" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" href="https://www.linkedin.com/in/shoukath-ali-b6650576/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" href="https://medium.com/@heyshoukath"><i class="ti-notepad" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" href ="mailto:shshaik@iu.edu"><i class="ti-google" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" href="https://www.instagram.com/_mr.stardom_"><i class="ti-instagram" aria-hidden="true"></i></a></li>
+                    <li class="social-item"><a class="social-link" href="https://github.com/shoukath-ali"><i class="ti-github" aria-hidden="true"></i></a></li>
                 </ul>  
             </div>
             <div class="col-lg-4 about-card">
@@ -236,7 +239,7 @@
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <h6>Large language models</h6>
+                            <h6>GenAI - Large language models</h6>
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
@@ -607,7 +610,7 @@
                         <div class="portfolio-item">
                             <img src="assets/imgs/PORT.png" class="img-fluid" alt="Portfolio">  
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/branding-2.jpg"></a>
+                                <a class="img-popup" href="https://shoukath-ali.github.io/Resume/"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Portfolio</h6>
                                     <p class="subtitle">Built a personal web portfolio using HTML, CSS, Bootstrap, and JavaScript, with GitHub as the hosting platform. Future plans include transitioning to React and integrating blockchain technology.</p>
@@ -767,11 +770,11 @@
                             </div>
                         </div>
                         <ul class="social-icons pt-4">
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-google" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link text-dark" href="https://www.linkedin.com/in/shoukath-ali-b6650576/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link text-dark" href="https://medium.com/@heyshoukath"><i class="ti-notepad" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link text-dark" href="mailto:shshaik@iu.edu"><i class="ti-google" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link text-dark" href="https://www.instagram.com/_mr.stardom_"><i class="ti-instagram" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link text-dark" href="https://github.com/shoukath-ali"><i class="ti-github" aria-hidden="true"></i></a></li>
                         </ul> 
                     </div>
                 </div>
