--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Shoukath Ali</h1>
-                <h6 class="header-mono" >Data Science Engineer | Developer</h6>
+                <h6 class="header-mono" >Data Science | Data Engineer | AI </h6>
                 <a href="https://www.icloud.com/iclouddrive/038jZwUrpy5AtWq9_KmODTU8g#Shoukath_CV", target="_blank"><button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Resume</button></a>
             </div>
         </div>
     </header>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white" data-spy="affix" data-offset-top="510">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-dark" data-spy="affix" data-offset-top="510">
         <div class="container">
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -91,17 +91,17 @@
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">Self-motivated Data Science student looking for a Full time position in an organization, where I can start gaining real world challenges,and experience business, technology, finance and development skills to support growth and success. I would love to explore and experience data roles.</h5>
-                <p class="mt-20">Fun Fact: Born in the city of destiny.</p>
-                <p class="mt-20">I'm a Nature lover (My beautiful University, has it all)</p>
-                <p class="mt-20">I love swimming in the midst of Natural Flow</p>
+                <p class="mt-20">Fun Fact: From city of destiny.</p>
+                <p class="mt-20">Nature lover (My beautiful University, has it all)</p>
+                <p class="mt-20">Love swimming in the midst of Natural Flow</p>
                 <a href="https://www.icloud.com/iclouddrive/038jZwUrpy5AtWq9_KmODTU8g#Shoukath_CV" , target="_blank"><button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button></a>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
                 <span class="line mb-5"></span>
                 <ul class="mt40 info list-unstyled">
-                    <li><span>Birthdate</span> : 11/19/2000</li>
-                    <li><span>Email</span> : shshaik@iu.edu</li>
+                    <!-- <li><span>Birthdate</span> : 11/19/2000</li> -->
+                    <li><span>Email</span> : shshaik@iu.edu </li>
                     <li><span>Phone</span> : + (930) 444-0530</li>
                     <!-- <li><span>Skype</span> : Shoukath </li> -->
                     <li><span>Address</span> :  Bloomington, Indiana, USA.</li>
@@ -113,6 +113,8 @@
                     <li class="social-item"><a class="social-link" href="https://www.instagram.com/_mr.stardom_"><i class="ti-instagram" aria-hidden="true"></i></a></li>
                     <li class="social-item"><a class="social-link" href="https://github.com/shoukath-ali"><i class="ti-github" aria-hidden="true"></i></a></li>
                 </ul>  
+
+                
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">My Expertise</h3>
@@ -288,7 +290,7 @@
                             <div class="m-auto"><i class="ti-layers-alt icon-xl"></i></div>
                         </div>
                         <div class="col-7 text-left py-3">
-                            <h1 class="text-danger font-weight-bold font40">50+</h1>
+                            <h1 class="text-danger font-weight-bold font40">30+</h1>
                             <p class="text-light mb-1">Project Finished</p>
                         </div>
                     </div>
@@ -299,7 +301,7 @@
                             <div class="m-auto"><i class="ti-face-smile icon-xl"></i></div>
                         </div>
                         <div class="col-7 text-left py-3">
-                            <h1 class="text-danger font-weight-bold font40">100+</h1>
+                            <h1 class="text-danger font-weight-bold font40">40+</h1>
                             <p class="text-light mb-1">Accomplishments</p>
                         </div>
                     </div>
@@ -479,15 +481,15 @@
             </div>
         </div>
     </section> -->
-    <section class="section bg-dark py-5">
+    <section class="section bg-white py-5">
         <div class="container text-center">
             <h2 class="text-light mb-5 font-weight-normal">I'm available for full time roles</h2>
-            <button class="btn bg-primary w-lg" > Hire me </button>
+            <a href="#contact "><button class="btn bg-primary w-lg" >Connect!</button></a>
         </div>
     </section>
 
-    <!-- Portfolio Section -->
-    <section class="section bg-custom-gray" id="portfolio">
+    <!-- Portfolio Section bg-custom-gray" -->
+    <section class="section bg-white" id="portfolio">
         <div class="container">
             <h1 class="mb-5"><span class="text-danger">My</span> Portfolio</h1>
             <div class="portfolio">
@@ -766,7 +768,7 @@
                                 <i class="ti-envelope icon-md"></i>
                             </div>
                             <div class="col-10">
-                                <h6 class="d-inline">Email :<br> <span class="text-muted">shshaik@iu.edu</span></h6>
+                                <h6 class="d-inline">Email :<br> <a href="mailto:shshaik@iu.edu"><span class="text-muted">shshaik@iu.edu</span></h6></a>
                             </div>
                         </div>
                         <ul class="social-icons pt-4">
