--- a/index.html
+++ b/index.html
@@ -511,11 +511,48 @@
                     </a>
                 </div>
                 <div class="portfolio-container"> 
-                    <div class="col-md-6 col-lg-4 data_eng new">
+                    <div class="col-md-6 col-lg-4 GenAi data_science new">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/sun.jpg" class="img-fluid" alt="Seed Clsssification using SparkML">
+                            <div class="content-holder">
+                                <a class="img-popup" href="https://github.com/shoukath-ali/Seed_SparkMLClassification_Analysis"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">Seed Clsssification using SparkML</h6>
+                                    <p class="subtitle">Developed a robust data pipeline using PySpark and Pandas to process and analyze a 2,500-row sunflower seed dataset, enabling high-quality classification through advanced feature engineering and statistical analysis.
+                                    </p>
+                                </div>
+                            </div>   
+                        </div>             
+                    </div>
+                    <div class="col-md-6 col-lg-4 data_science data_eng new">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/RETAIL.jpg" class="img-fluid" alt="End-to-End Retail Analytics">
+                            <div class="content-holder">
+                                <a class="img-popup" href="https://github.com/shoukath-ali/retail-data-eng"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">End-to-End Retail Analytics</h6>
+                                    <p class="subtitle">Developed a scalable analytics solution using Datalakes, PySpark, Spark SQL, and PowerBI that boosted the analytics workflow by 30%.</p>
+                                </div>
+                            </div>   
+                        </div>             
+                    </div>
+                    <div class="col-md-6 col-lg-4 GenAi data_science new">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/boston.jpg" class="img-fluid" alt="Boston Housing Analytics">
+                            <div class="content-holder">
+                                <a class="img-popup" href="https://github.com/shoukath-ali/Boston-Housing-Analysis"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">Boston Housing Analytics</h6>
+                                    <p class="subtitle">Performed regression analysis to evaluate the impact of proximity to employment centers on housing values, revealing a statistically significant positive relationship with an impact coefficient of 1.0916 (p-value < 0.05).</p>
+                                </div>
+                            </div>   
+                        </div>             
+                    </div>
+                    <div class="col-md-6 col-lg-4 data_science data_eng new">
                         <div class="portfolio-item">
                             <img src="assets/imgs/LC.png" class="img-fluid" alt="Lending Club Analytics">
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/web-1.jpg"></a>
+                                <a class="img-popup" href="https://github.com/shoukath-ali/Lending-Club-Analytics"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Lending Club Analytics</h6>
                                     <p class="subtitle">Developed a scalable data solution using HDFS, PySpark, Spark SQL, and Spark UI that reduced risk analysis time by 40%, improving operational efficiency and reducing costs by 30%.</p>
@@ -525,9 +562,9 @@
                     </div>
                     <div class="col-md-6 col-lg-4 data_eng new">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/VDA.png" class="img-fluid" alt="Vehicle Data Architecture and Implementation">
+                            <img src="assets/imgs/veh.jpg" class="img-fluid" alt="Vehicle Data Architecture and Implementation">
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/web-2.jpg"></a>
+                                <a class="img-popup" href="https://github.com/shoukath-ali/usedcars"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Vehicle Data Architecture and Implementation</h6>
                                     <p class="subtitle">Led end-to-end development of a data-driven platform using SQL and ER diagrams, achieving 100% deployment success. Demonstrated the ability to translate business requirements into effective technical solutions.</p>
@@ -539,7 +576,7 @@
                         <div class="portfolio-item">
                             <img src="assets/imgs/red.png" class="img-fluid" alt="Reddit Data Analytics">                         
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/red.png"></a>
+                                <a class="img-popup" href="https://github.com/shoukath-ali/Data-mining_reddit_final_project"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Reddit Data Analytics</h6>
                                     <p class="subtitle">Analyzed Reddit posts and comments using a hybrid model combining statistical topic modeling (Latent Dirichlet Allocation) with LLMs (Bert, MiniLM, GPT) to improve contextual semantic analysis by 30%.</p>
@@ -551,7 +588,7 @@
                         <div class="portfolio-item">
                             <img src="assets/imgs/Ka.png" class="img-fluid" alt="Home Credit Default Risk (HCDR)">
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/Ka.png"></a>
+                                <a class="img-popup" href="https://github.com/shoukath-ali/Home-Credit-Analysis"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Home Credit Default Risk (HCDR)</h6>
                                     <p class="subtitle">Conducted comprehensive data analysis and predictive modeling using Python, including data wrangling, feature engineering, and machine learning models (XGBoost, SVM) for credit risk assessment.</p>
@@ -564,7 +601,7 @@
                         <div class="portfolio-item">
                             <img src="assets/imgs/sp.png" class="img-fluid" alt="SpaceX Failure analysis">                               
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/advertising-1.jpg"></a>
+                                <a class="img-popup" href="https://github.com/shoukath-ali/Spacex_IBM_DS_Capstone"></a>
                                 <div class="text-holder">
                                     <h6 class="title">SpaceX Failure analysis</h6>
                                     <p class="subtitle">Performed end-to-end data analysis and predictive modeling with a focus on achieving an accuracy of 87% using a Decision Tree model. Included feature engineering and interactive visualizations.</p>
@@ -576,7 +613,7 @@
                         <div class="portfolio-item">
                             <img src="assets/imgs/MNIST.png" class="img-fluid" alt="MNIST Handwritten Digit Recognition">  
                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/web-3.jpg"></a>
+                                <a class="img-popup" href="https://github.com/shoukath-ali/MNIST-Hand-written-digit-recognition"></a>
                                 <div class="text-holder">
                                     <h6 class="title">MNIST Handwritten Digit Recognition</h6>
                                     <p class="subtitle">Developed a neural network model for handwritten digit recognition using the MNIST dataset, focusing on understanding neural networks and tensors.</p>
@@ -588,7 +625,7 @@
                         <div class="portfolio-item">
                             <img src="assets/imgs/CHURN.png" class="img-fluid" alt="Customer Churn Data Visualization">       
                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/advertising-3.jpg"></a>
+                                <a class="img-popup" href="https://github.com/shoukath-ali/customer_churn_powerBI"></a>
                                 <div class="text-holder">
                                     <h6 class="title">Customer Churn Data Visualization</h6>
                                     <p class="subtitle">Created an enterprise-wide data visualization report using PowerBI, applying advanced data modeling techniques to provide actionable insights into customer churn trends.</p>
@@ -600,7 +637,7 @@
                         <div class="portfolio-item">
                             <img src="assets/imgs/COV.png" class="img-fluid" alt="Covid/Visualisation live Dashboard">                        
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/branding-1.jpg"></a>
+                                <a class="img-popup" href="https://github.com/shoukath-ali/Covid-Dashboard-India"></a>
                                 <div class="text-holder">
                                     <h6 class="title"> Covid/Visualisation live Dashboard</h6>
                                     <p class="subtitle">Created an interactive geospatial visualization dashboard for COVID-19 data, including live web scraping, statistical measures!</p>
@@ -622,7 +659,7 @@
                     </div> 
                     <div class="col-md-6 col-lg-4  web">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/BLOCK.png" class="img-fluid" alt="Download free bootstrap 4 admin dashboard, free boootstrap 4 templates">   
+                            <img src="assets/imgs/BLOCK.png" class="img-fluid" alt="Health Care System based on Blockchain Technology">   
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/branding-3.jpg"></a>
                                 <div class="text-holder">
