--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Shoukath Ali</h1>
                 <h6 class="header-mono" >Data Science | Data Engineer | AI </h6>
-                <a href="https://www.icloud.com/iclouddrive/038jZwUrpy5AtWq9_KmODTU8g#Shoukath_CV", target="_blank"><button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Resume</button></a>
+                <!-- <a href="https://www.icloud.com/iclouddrive/038jZwUrpy5AtWq9_KmODTU8g#Shoukath_CV", target="_blank"><button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Resume</button></a> -->
             </div>
         </div>
     </header>
