--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a href="#about" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#resume" class="nav-link">Resume</a>
+                        <a href="#resume" class="nav-link">Experience</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav brand">
@@ -85,7 +85,7 @@
                         <a href="#contact" class="nav-link">Contact</a>
                     </li>
                     <li class="nav-item ml-8">
-                        <a href="https://drive.google.com/file/d/1H5eJPuSXoCyaX7UPI36uOjdAxIZ24Esa/view?usp=sharing" class="btn btn-primary nav-resume-btn" download>Download Resume</a>
+                        <a href="https://drive.google.com/file/d/1H5eJPuSXoCyaX7UPI36uOjdAxIZ24Esa/view?usp=sharing" class="btn btn-primary nav-resume-btn" download> Resume</a>
                     </li>
                 </ul>
             </div>
