Hire Me Changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Shoukath Ali's Portfolio">
     <meta name="author" content="ali">
-    <title>Welcome | TO SHOUKATH'S PORTFOLIO</title>
+    <title>Shoukath's Portfolio</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + ali main styles -->
@@ -42,10 +42,10 @@
             <div class="header-content reveal">
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Shoukath Ali</h1>
-                <h6 class="header-mono" >AI/Data/Software — building reliable ML and scalable systems</h6>
+                <h6 class="header-mono" >AI/Data/Software — building reliable Data, BI, ML and scalable systems</h6>
                 <div class="mt-12 gap-12 flex-wrap flex">
-                    <a href="https://drive.google.com/file/d/1H5eJPuSXoCyaX7UPI36uOjdAxIZ24Esa/view?usp=sharing" class="btn btn-primary" download><i class="ti-download pr-2"></i>Download Resume</a>
                     <a href="mailto:tech@shoukath.me" class="btn btn-outline-danger">Email Me</a>
+                    <a href="https://www.topmate.io/shoukath_ali_shaik/page/CTpsOZ9s6e" class="btn btn-primary" target="_blank" rel="noopener"><i class="ti-rocket pr-2"></i>Hire Me!</a>
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
                     <img src="assets/imgs/avatar.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Shoukath Ali</h5>
-                        <div class="brand-subtitle">Aspiring Data + AI Engineer | Analytics Engineer</div>
+                        <div class="brand-subtitle">Aspiring Data + AI Engineer | BI / Analytics Engineer</div>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
@@ -85,7 +85,7 @@
                         <a href="#contact" class="nav-link">Contact</a>
                     </li>
                     <li class="nav-item ml-8">
-                        <a href="https://drive.google.com/file/d/1H5eJPuSXoCyaX7UPI36uOjdAxIZ24Esa/view?usp=sharing" class="btn btn-primary nav-resume-btn" download> Resume</a>
+                        <a href="https://www.topmate.io/shoukath_ali_shaik/page/CTpsOZ9s6e" class="btn btn-primary nav-resume-btn" target="_blank" rel="noopener"><i class="ti-rocket pr-2"></i>Hire Me!</a>
                     </li>
                 </ul>
             </div>
@@ -107,7 +107,7 @@
                     <ul class="list-unstyled">
                         <li class="mb-2">
                             <i class="ti-target text-danger mr-2"></i>
-                            Specializing in ML, Data Engineering, and GenAI applications
+                            Specialized in ML, Data Engineering, and GenAI applications
                         </li>
                         <li class="mb-2">
                             <i class="ti-stats-up text-danger mr-2"></i>
@@ -142,13 +142,7 @@
                     </ul>
                 </div>
             
-                <div class="cta-button mt-4">
-                    <a href="https://drive.google.com/file/d/1H5eJPuSXoCyaX7UPI36uOjdAxIZ24Esa/view?usp=sharing" target="_blank">
-                        <button class="btn btn-outline-danger">
-                            <i class="ti-download mr-2"></i>Download CV
-                        </button>
-                    </a>
-                </div>
+                
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
@@ -378,7 +372,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">June 2024 - August 2024</h6>
+                            <h6 class="title text-danger">June 2024 - Present</h6>
                             <P>AI Engineer (Data Science) Intern</P>
                             <P class="subtitle">Developed, trained and deployed an AI-powered recommendation system using data pipeline, collaborative filtering and vector search to enhance business operations and revenue.</P>
                             <hr>
@@ -1076,6 +1070,7 @@
                             <li class="social-item"><a class="social-link text-dark" href="https://medium.com/@heyshoukath"><i class="ti-notepad" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link text-dark" href="mailto:tech@shoukath.me"><i class="ti-google" aria-hidden="true"></i></a></li>
                             <!-- <li class="social-item"><a class="social-link text-dark" href="https://www.instagram.com/_mr.stardom_"><i class="ti-instagram" aria-hidden="true"></i></a></li> -->
+                            <li class="social-item"><a class="social-link text-dark" href="https://topmate.io/heyshoukath" target="_blank" rel="noopener"><i class="ti-rocket" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link text-dark" href="https://github.com/shoukath-ali"><i class="ti-github" aria-hidden="true"></i></a></li>
                         </ul> 
                     </div>
